--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^7.0.0",
     "fastify": "^2.3.0",
     "fastify-boom": "^0.1.0",
+    "fastify-cors": "^2.1.3",
     "fastify-knex": "^0.1.1",
     "knex": "^0.16.5",
     "objection": "^1.6.8",
