--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "dotenv": "^7.0.0",
     "fastify": "^2.3.0",
     "fastify-boom": "^0.1.0",
@@ -18,6 +19,7 @@
     "knex": "^0.16.5",
     "objection": "^1.6.8",
     "pg": "^7.10.0",
-    "require-all": "^3.0.0"
+    "require-all": "^3.0.0",
+    "sanitize-html": "^1.20.1"
   }
 }
