--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=development tap",
     "start": "NODE_ENV=development nodemon -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^16.0.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^7.0.0",
     "fastify": "^2.3.0",
     "fastify-boom": "^0.1.0",
     "fastify-cors": "^2.1.3",
+    "fastify-jwt": "^1.1.0",
     "fastify-knex": "^0.1.1",
+    "fastify-rate-limit": "^2.3.0",
     "knex": "^0.16.5",
     "objection": "^1.6.8",
+    "objection-password": "^2.0.0",
     "pg": "^7.10.0",
     "require-all": "^3.0.0",
     "sanitize-html": "^1.20.1"
+  },
+  "devDependencies": {
+    "tap": "^14.6.4"
   }
 }
