--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=development tap",
+    "test": "NODE_ENV=development mocha test/test.js",
     "start": "NODE_ENV=development nodemon -r dotenv/config index.js"
   },
   "author": "",
@@ -18,8 +18,11 @@
     "fastify-cors": "^2.1.3",
     "fastify-jwt": "^1.1.0",
     "fastify-knex": "^0.1.1",
+    "fastify-nodemailer": "^4.1.1",
     "fastify-rate-limit": "^2.3.0",
+    "got": "^9.6.0",
     "knex": "^0.16.5",
+    "nodemailer": "^6.3.1",
     "objection": "^1.6.8",
     "objection-password": "^2.0.0",
     "pg": "^7.10.0",
@@ -27,6 +30,8 @@
     "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
-    "tap": "^14.6.4"
+    "chai": "^4.2.0",
+    "faker": "^4.1.0",
+    "mocha": "^6.2.1"
   }
 }
